# asset-core

./: .gitignore  CLAUDE.md  README.md  assetcore.toml  demo.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  sg.env.example
.github/workflows/: docs.yml  pr-automation.yml
assetcore/: __init__.py  api.py
assetcore/app/: __init__.py  observability.py  services.py  verbs.py
assetcore/core/: __init__.py  entities.py  ports.py  rules.py  types.py
assetcore/db/: alembic.ini  connection.py  schema.sql
assetcore/db/migrations/: env.py
assetcore/db/migrations/versions/: 0001_initial_schema.py
assetcore/infra/: __init__.py  _providers.py  broadcast_sink.py  inmemory_repo.py  notify_sink.py  postgres_repo.py  schema.sql  sqlite_repo.py
assetcore/integrations/: _register.py  blender.py  jira.py  max.py  maya.py  photoshop.py  shotgrid.py  substance.py  unreal.py
assetcore/sdk/: __init__.py  automation.py  cli.py  client.py  dcc_adapter.py  engine_adapter.py  providers.py  resolvers.py  settings.py  stamping.py  tools.py  tracker_adapter.py
assetcore/service/: __init__.py  app.py  auth.py  events.py  routes.py  schemas.py
cli/: assetcore_cli.py
docs/: ARCHITECTURE.md  CLI.md  COOKBOOK.md  DESIGN.md  DEVELOPMENT.md  LIVE_PROVING.md  OPERATIONS.md  PHASE1.md  PIPELINE_MODEL.md  PROVIDER_LAYER.md  README.md  ROADMAP.md  requirements.txt
docs/api/: app.md  core.md  index.md  infra.md  integrations.md  sdk.md  service.md
scripts/: demo_animation.py  demo_automation.py  demo_environment.py  e2e_maya_step.py  e2e_unreal_step.py  live_e2e.py  live_max_publish.py  live_maya_publish.py  live_photoshop_publish.py  live_shotgrid_mirror.py  live_unreal_reconcile.py  stamp_coverage_gate.py  validate_config.py
tests/: scenarios_common.py  test_scenarios.py
tests/contract/: conftest.py  fakes.py  test_automation.py  test_cli.py  test_dcc_contract.py  test_engine_contract.py  test_import_linter.py  test_observability.py  test_pipeline_endpoints.py  test_providers.py  test_resolvers.py  test_sdk_firewall.py  test_swap_crosstool.py  test_tracker_contract.py
tests/integration/: test_animation_workflow.py  test_backends.py  test_environment_workflow.py  test_migrations.py  test_postgres_notify.py  test_real_tools_gated.py  test_service.py
tests/unit/: test_graph_relocate.py  test_observability.py  test_rules.py  test_scenarios.py  test_verbs_guards.py
