[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "assetcore"
version = "0.1.0"
description = "Identity-first asset management for game & film production pipelines"
requires-python = ">=3.11"  # tomllib (config layer, sdk/settings.py) is stdlib only on 3.11+
# The `assetcore` console script (the primary interface) and the SDK client speak
# HTTP, so httpx is a genuine runtime dependency. The pure core/app/sqlite path stays
# stdlib-only at import time — importing `assetcore` does not pull httpx — so the
# zero-setup, in-process story is unchanged. (pytest is a test tool, not a runtime
# dep; it lives in the `test`/`dev` extras.)
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
assetcore = "assetcore.sdk.cli:main"

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
service = ["fastapi>=0.110", "uvicorn>=0.27"]   # httpx is a base dep
migrations = ["alembic>=1.13", "sqlalchemy>=2.0"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]
test = ["pytest>=8.0"]
# everything a contributor needs, composed from the extras above + the firewall linter
dev = ["assetcore[service,migrations,docs,test]", "import-linter>=2.0"]

# The importable distribution is the `assetcore` package only; the repo also holds
# tests/, scripts/, docs/, and the generated site/ at top level, so constrain
# discovery explicitly (a flat layout otherwise errors on multiple top-level dirs).
[tool.setuptools.packages.find]
include = ["assetcore*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# The dependency firewall, mechanically enforced (ARCHITECTURE Part 8).
# Run: `lint-imports`. This is the canonical gate; the source-scan tests in
# tests/contract/test_sdk_firewall.py are a zero-dependency backstop.
[tool.importlinter]
root_package = "assetcore"

[[tool.importlinter.contracts]]
name = "Inward-only layering (service -> infra -> app -> core)"
type = "layers"
layers = [
    "assetcore.service",
    "assetcore.infra",
    "assetcore.app",
    "assetcore.core",
]
# the SDK + integrations sit outside the inward stack; they are constrained below.
exhaustive = false

[[tool.importlinter.contracts]]
name = "SDK talks only over HTTP (never the core)"
type = "forbidden"
source_modules = ["assetcore.sdk"]
forbidden_modules = [
    "assetcore.core",
    "assetcore.app",
    "assetcore.infra",
    "assetcore.service",
]

[[tool.importlinter.contracts]]
name = "Integrations import only the SDK"
type = "forbidden"
source_modules = ["assetcore.integrations"]
forbidden_modules = [
    "assetcore.core",
    "assetcore.app",
    "assetcore.infra",
    "assetcore.service",
]
